--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <h2>Need Help?</h2>
   <p>If you’re experiencing issues with the app or have questions, please reach out:</p>
   <ul>
-    <li>Email: <a href="mailto:rentalkngdm@gmail.com">support@kngdmcars.com</a></li>
+    <li>Email: <a href="mailto:rentalkngdm@gmail.com">rentalkngdm@gmail.com</a></li>
     <li>FAQ: Coming soon</li>
   </ul>
 
